--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ main/timetable/node_modules
 main/static/app.bundle.js.map
 main/static/index.html
 main/static/vendor.bundle.js.map
+main/sample_db.sqlite
+
